# integsol

./: .gitignore  README.md  base.py  mesh_reader.py  playgroung.ipynb  pyproject.toml
integsol/: base.py  mesh_reader.py
integsol/compute/: kernels.py  magnonic_eigenmodes.py  operators.py  vectors.py
integsol/mesh/: mesh.py  mesh_validators.py
integsol/structures/: kernels.py  operators.py  vectors.py
integsol/validators/: compute_validators.py  mesh_validators.py
outputs/: mesh.txt
outputs/interpolation_coordinates/: coordinates_2024-11-26 19:58:42.549330.csv  coordinates_2024-11-26 20:16:24.221282.txt  coordinates_2024-12-03 17:53:42.895129.txt  coordinates_2024-12-03 18:04:34.037079.txt  coordinates_2024-12-11 19:24:45.759932.txt  coordinates_2024-12-13 14:06:38.159875.txt  coordinates_2024-12-14 18:16:15.001118.txt  coordinates_2024-12-17 14:19:31.480623.txt  coordinates_2024-12-17 15:00:18.796246.txt  coordinates_2024-12-20 14:09:29.679446.txt  coordinates_2024-12-20 16:28:19.375337.txt
test_inputs/: H_demag.txt  H_eff_75nm.txt  H_eff_coerse.txt  magnetization.txt  magnetization_75nm.txt  magnetization_coerse.txt  magnetization_coerser.txt  mesh_75nm.mphtxt  mesh_coerce.mphtxt  mesh_coerse.mphtxt  mesh_coerser.mphtxt  mesh_normal.mphtxt  sphere_r=300_H_eff_100nm.txt  sphere_r=300_H_eff_80nm.txt  sphere_r=300_H_eff_90nm.txt  sphere_r=300_magnetization_100nm.txt  sphere_r=300_magnetization_80nm.txt  sphere_r=300_magnetization_90nm.txt  sphere_r=300_mesh_100nm.mphtxt  sphere_r=300_mesh_80nm.mphtxt  sphere_r=300_mesh_90nm.mphtxt
(+1 files in other folders)
